objects/tffa__PartyFinancialAccountXref__c.object
<CustomObject>
    <description>Party to financial account association.Captures the role played by the party in each financial account.</description>
    <fields>
        <fullName>tffa__ApplicantRole__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The role played by the party in the financial account.</description>
        <label>Role</label>
        <referenceTo>tffa__ApplicantRole__c</referenceTo>
        <relationshipLabel>Party Financial Account Relationships</relationshipLabel>
        <relationshipName>PartyFinancialAccountXrefs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialAccount__c</fullName>
        <description>The financial account  managed by this relationship</description>
        <label>Financial Account</label>
        <referenceTo>tffa__FinancialAccount__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>Parties</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Party managing the relationship</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>FinancialAccountXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current applicant is primary owner of the account.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__RoleAuthority__c</fullName>
        <description>A semicolon delimited list of account authority powers which can be assigned to each applicant on the account.</description>
        <label>Role Authority</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleAuthority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RoleCategory__c</fullName>
        <defaultValue>&quot;OWNER&quot;</defaultValue>
        <description>Denormalized category field of applicant role.</description>
        <label>Role category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicantRoleCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__RoleCode__c</fullName>
        <description>Denormalized code field of applicant role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RoleName__c</fullName>
        <description>Denormalized name field of applicant role.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Role name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Role__c</fullName>
        <description>The role of the party in the financial account. Values could be BORROWER,CO-SIGNER,GUARDIAN,AUTHORIZEDSIGNATORY,OTHER,OWNER,JOINTOWNER, GUARANTOR</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyFinancialAccountRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Party Financial Account Relationship</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Party Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Financial Account Name</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>